<resources>
    <string name="app_name">DownTime</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="textview">TextView</string>
    <string name="name">Enter Event Name</string>
    <string name="create">CREATE</string>
    <string name="location">Location</string>
    <string name="duration">Duration</string>
    <string name="description">Description</string>
    <string name="event_name">Event Name</string>
    <string name="create_a_new_event">Create a new event</string>
    <string name="calculate">Calculate</string>
    <string name="total_events">Total Events:</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="eco543">eco543</string>
    <string name="username">username</string>
    <string name="rebecca">(Rebecca)</string>
    <string name="todo">TODO</string>
    <string name="leisure_time">Leisure Time</string>
    <string name="recommended_sleep_7_hours">Recommended Sleep: 7 hours</string>
    <string name="success_lable">Welcome to DownTime!</string>
    <string name="error_label">Please enter all fields</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="not_registered">Not Registered?</string>
    <string name="term_of_use_privacy_policy">Term of use. Privacy Policy</string>
    <string name="error_mess">Agree to the terms and conditions</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in.</string>
    <string name="user_name">User name</string>
    <string name="first_name">First name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="conditions">I agree with terms and conditions</string>
    <string name="log">Already have a login?</string>
    <string name="sign_up">Sign up</string>
    <string name="pass">Password</string>
    <string name="First_name">First name</string>
    <string name="sign_out">Sign out</string>
    <string name="_2">2</string>
    <string name="hours_of_leisure">Hours of leisure</string>


</resources>
